# sara-engine

./: .dockerignore  .gitignore  Dockerfile  README.md  __init__.py  alembic.ini  pyproject.toml  settings.py
.github/workflows/: ci-cd.yml
cli/: __init__.py  __main__.py  common.py  context_cmd.py  delete_cmd.py  embed_cmd.py  get_cmd.py  index_cmd.py  init_cmd.py  latest_cmd.py  main.py  maintenance_cmd.py  pool_cmd.py  search_cmd.py  serve_cmd.py  watch_cmd.py
core/: errors.py  models.py
database/: memory_index.db  migrations.py  session.py
docs/: AUTOMATIC_FILE_WATCHING.md  CODE_EMBEDDING.md  DATABASE_CORRUPTION_SUMMARY.md  SARA_CLI_COMMANDS.md  SARA_DEVELOPMENT_RULES.md  SARA_MAINTENANCE.md
infrastructure/: code_embedding.py  database.py  embeddings.py  health.py  server.py  watcher.py  write_queue.py
infrastructure/indexer/: __init__.py  content_extractors.py  file_processors.py  id_generators.py  indexer_core.py  utils.py
infrastructure/search/: __init__.py  advanced_search.py  search_core.py  search_utils.py
migrations/: env.py
migrations/versions/: 001_initial_schema_with_fts.py  002_add_performance_indexes.py  003_add_indexed_files_table.py
scripts/: demo_write_queue.py  maintenance.py  performance_benchmark.py  sara_daemon.py  start_server.py  test_watcher.py
tests/: test_cli.py  test_performance_optimizations.py
